Fixed recursive related crash in runAwayFromPlayerWithTnt method.